--- a/SimTECH/SimTECH/Pages/UserManual/Topics/UnknownTopic.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/UnknownTopic.razor
@@ -1,5 +1,3 @@
-﻿<MudPaper>
-    <MudText>
-        Got no idea what you are trying to do here!
-    </MudText>
-</MudPaper>
+﻿<MudText>
+    Got no idea what you are trying to do here!
+</MudText>
