--- a/SimTECH/SimTECH/Pages/UserManual/Topics/RaceCat/Overtaking.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/RaceCat/Overtaking.razor
@@ -1,5 +1,5 @@
 ﻿<MudText Typo="Typo.h6">Overtaking</MudText>
-<MudDivider />
+<MudDivider Class="my-1" />
 
 <MudText Typo="Typo.subtitle1">What is it?</MudText>
 <MudText>
@@ -7,10 +7,10 @@
     <br />
     Attack minus Defensive, if result is negative then subtract that from attackers total.
     <br />
-    Battle RNG exists. The configureable number accounts for both the minimal negative and maximal positive, in other words when the Battle RNg 
+    Battle RNG exists. The configureable number accounts for both the minimal negative and maximal positive, in other words when the Battle RNg
     is 10, then the RNG-range will be from -10 to +10. This is assigned both to every attacking and defending value (for every indivdiual overtake).
     <br />
-    There are situations where overtakes will happen in an instant, for now this is limited to when the defender either DNFs or made a pitstop. 
+    There are situations where overtakes will happen in an instant, for now this is limited to when the defender either DNFs or made a pitstop.
     Mistakes meanwhile halves the value of an attacker or defender (which more often than not is going to be just the defender).
 </MudText>
 
@@ -28,7 +28,7 @@
 <MudText>
     Attack and Defense stats for overtaking. Kind of like one of those DnD games, where if a car behind has a score higher than the car ahead,
     they have to do like an Attack-Defense check to see how much time they lose/if they get past.
-    
+
     Basically I think it’d go something like this: A track has a natural “Defense” boost (overtaking difficulty) added on to a driver’s
     Defense stat while they’re trying to defend from an overtaking attempt. The Attacker has their own stat,
     plus a boost from how many points ahead they are at the moment. Blah blah blah, some RNG, Attack - Defense,
