--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -30,6 +30,7 @@
                         <MudTh Class="number-col">NO</MudTh>
                         <MudTh Style="width: 220px">Team</MudTh>
                         <MudTh Class="number-col">Points</MudTh>
+                        <MudTh Class="number-col">Target</MudTh>
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd Class="number-col-lg">
@@ -71,6 +72,9 @@
                         </MudTd>
                         <MudTd Class="number-col">
                             <MudText Typo="Typo.caption">@ReadScoredResult(context)</MudText>
+                        </MudTd>
+                        <MudTd Class="number-col">
+                            <MudText Typo="Typo.caption">@context.ExpectedPosition</MudText>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
