--- a/SimTECH/SimTECH/Pages/Racing/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Landing.razor
@@ -1,9 +1,7 @@
 ﻿<MudGrid Spacing="1">
     <MudItem xs="12">
-        <MudPaper MinHeight="60px" Class="pa-2">
-            <MudStack Row="true" Spacing="0" Justify="Justify.Center" AlignItems="AlignItems.Center">
-                <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
-            </MudStack>
+        <MudPaper MinHeight="60px" Class="pa-2 d-flex flex-row align-center justify-center">
+            <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
         </MudPaper>
     </MudItem>
     <MudItem xs="3">
@@ -62,7 +60,7 @@
             }
         </MudPaper>
     </MudItem>
-    <MudItem xs="6">
+    <MudItem xs="7">
         <MudPaper Class="pa-4 mud-height-full">
             <MudTable Items="@Model.RaweCeekDrivers.OrderBy(e => e.Grid)" Dense="true" Class="extra-dense">
                 <ToolBarContent>
@@ -76,6 +74,7 @@
                     <MudTh Style="max-width: 220px">Team</MudTh>
                     <MudTh Class="number-col">SUPP</MudTh>
                     <MudTh>Tyre</MudTh>
+                    <MudTh Class="number-col">TGT</MudTh>
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd Class="number-col-lg">
@@ -126,11 +125,14 @@
                             </TyreElement>
                         </MudLink>
                     </MudTd>
+                    <MudTd>
+                        <MudText Typo="Typo.caption">@context.ExpectedPosition</MudText>
+                    </MudTd>
                 </RowTemplate>
             </MudTable>
         </MudPaper>
     </MudItem>
-    <MudItem xs="3">
+    <MudItem xs="2">
         <MudPaper Class="pa-4 mud-height-full">
             <MudText Typo="Typo.h5">???</MudText>
             <MudDivider />
@@ -138,6 +140,11 @@
 
             <MudText>
                 You're an absolute blithering idiot.
+            </MudText>
+
+            <MudText Typo="Typo.body2" Color="Color.Info">
+                <MudIcon Icon="@IconCollection.Target" Size="Size.Small" />
+                [TGT]: Target position
             </MudText>
         </MudPaper>
     </MudItem>
