--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -107,6 +107,7 @@
             <MudItem xs="6">
                 <MudPaper>
                     <DevelopEntrant DevelopedEntrants="@DevelopedEntrants"
+                                    SelectedAspect="@selectedAspect"
                                     SelectedType="@selectedType"
                                     ShowOptionalColumn="@showOptionalColumn"
                                     OnSaveDevelopment="SaveDevelopment" />
