--- a/SimTECH/SimTECH/Pages/UserManual/Guide.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Guide.razor
@@ -1,7 +1,11 @@
 ﻿@page "/guide"
 @inject BreadcrumbProvider _bread
 @using SimTECH.Pages.UserManual.Topics
+@using SimTECH.Pages.UserManual.Topics.FactorCat
+@using SimTECH.Pages.UserManual.Topics.LeagueCat
+@using SimTECH.Pages.UserManual.Topics.Misc
 @using SimTECH.Pages.UserManual.Topics.RaceCat
+@using SimTECH.Pages.UserManual.Topics.SeasonCat
 @using SimTECH.Pages.UserManual.Topics.SetupCat
 
 <PageTitle>Guide</PageTitle>
@@ -50,6 +54,7 @@
         {
             Title = "Intro",
             Icon = Icons.Custom.FileFormats.FileExcel,
+            ExpandedIcon = Icons.Custom.FileFormats.FileExcel,
             Type = typeof(Intro),
             Order = 0,
         },
@@ -59,73 +64,87 @@
             Icon = Icons.Custom.Uncategorized.Folder,
             ExpandedIcon = Icons.Custom.Uncategorized.FolderOpen,
             Type = typeof(UnknownTopic),
+            Order = 10,
             Children = new()
             {
-                new GuidePage
-                {
-                    Title = "Drivers",
-                    Icon = Icons.Custom.FileFormats.FileImage,
-                    Type = typeof(DriverTopic)
-                },
+                new GuidePage("Drivers", IconCollection.Helmet, typeof(DriverTopic), 0),
+                new GuidePage("Teams", Icons.Material.Filled.CarRepair, typeof(TeamTopic), 1),
+                new GuidePage("Engines", IconCollection.Engine, typeof(EngineTopic), 2),
+                new GuidePage("Tracks", Icons.Material.Filled.AddRoad, typeof(TrackTopic), 3),
+                new GuidePage("Traits", Icons.Material.Filled.FlashOn, typeof(TraitTopic), 4),
             }
         },
         new GuideCategory
         {
-            Title = "Racing",
-            Icon = Icons.Custom.Uncategorized.Folder,
-            ExpandedIcon = Icons.Custom.Uncategorized.FolderOpen,
-            Type = typeof(Racing),
+            Title = "Factors",
+            Icon = IconCollection.SteeringWheel,
+            ExpandedIcon = IconCollection.SteeringWheel,
+            Type = typeof(UnknownTopic),
+            Order = 20,
             Children = new()
             {
-                new GuidePage
-                {
-                    Title = "Distance",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Distance)
-                },
-                new GuidePage
-                {
-                    Title = "Advance",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Advance)
-                },
-                new GuidePage
-                {
-                    Title = "Reliability",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Reliability)
-                },
-                new GuidePage
-                {
-                    Title = "Strategy",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Strategy)
-                },
-                new GuidePage
-                {
-                    Title = "Overtaking",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Overtaking)
-                },
-                new GuidePage
-                {
-                    Title = "Safety car",
-                    Icon = IconCollection.AlertTriangle,
-                    Type = typeof(SafetyMoment)
-                },
-                new GuidePage
-                {
-                    Title = "Modifiers",
-                    Icon = IconCollection.Polygon,
-                    Type = typeof(Modifiers)
-                },
+                new GuidePage("Tyre suppliers", Icons.Material.Filled.Cloud, typeof(ManufacturerTopic)),
+                new GuidePage("Tyres", Icons.Material.Filled.LocalGasStation, typeof(TyreTopic)),
+                new GuidePage("Incidents", IconCollection.TrafficCone, typeof(IncidentTopic)),
+                new GuidePage("Climates", Icons.Material.Filled.Cloud, typeof(ClimateTopic)),
+            }
+        },
+        new GuideCategory
+        {
+            Title = "Contracts",
+            Icon = Icons.Material.Filled.AssignmentInd,
+            ExpandedIcon = Icons.Material.Outlined.AssignmentInd,
+            Type = typeof(ContractTopic),
+            Order = 30,
+        },
+        new GuideCategory
+        {
+            Title = "Leagues",
+            Icon = IconCollection.Trophy,
+            ExpandedIcon = IconCollection.Trophy,
+            Type = typeof(LeagueTopic),
+            Order = 40,
+        },
+        new GuideCategory
+        {
+            Title = "Seasons",
+            Icon = Icons.Material.Filled.Flag,
+            ExpandedIcon = Icons.Material.Outlined.Flag,
+            Type = typeof(SeasonTopic),
+            Order = 50,
+            Children = new()
+            {
+                new GuidePage("Development", IconCollection.Polygon, typeof(DevelopTopic)),
+            }
+        },
+        new GuideCategory
+        {
+            Title = "Race week",
+            Icon = Icons.Custom.Uncategorized.Folder,
+            ExpandedIcon = Icons.Custom.Uncategorized.FolderOpen,
+            Type = typeof(RaceweekTopic),
+            Order = 60,
+            Children = new()
+            {
+                new GuidePage("Practice", IconCollection.Polygon, typeof(PracticeTopic)),
+                new GuidePage("Qualifying", IconCollection.Polygon, typeof(QualifyingTopic)),
+                new GuidePage("Race", IconCollection.Polygon, typeof(RaceTopic)),
+                new GuidePage("Distance", IconCollection.Polygon, typeof(Distance)),
+                new GuidePage("Advance", IconCollection.Polygon, typeof(Advance)),
+                new GuidePage("Reliability", IconCollection.Polygon, typeof(Reliability)),
+                new GuidePage("Strategy", IconCollection.Polygon, typeof(Strategy)),
+                new GuidePage("Overtaking", IconCollection.Polygon, typeof(Overtaking)),
+                new GuidePage("Safety car", IconCollection.AlertTriangle, typeof(SafetyMoment)),
+                new GuidePage("Modifiers", IconCollection.Polygon, typeof(Modifiers)),
             }
         },
         new GuideCategory
         {
             Title = "Glossary",
-            Icon = Icons.Custom.FileFormats.FileExcel,
+            Icon = Icons.Material.Filled.MenuBook,
+            ExpandedIcon = Icons.Material.Filled.MenuBook,
             Type = typeof(Glossary),
+            Order = 999,
         },
     };
 
@@ -146,7 +165,16 @@
 
     internal class GuidePage
     {
-        public string Title { get; set; } = "[Unknown]";
+        public GuidePage() { }
+        public GuidePage(string title, string icon, Type type, int order = 5)
+        {
+            Title = title;
+            Icon = icon;
+            Type = type;
+            Order = order;
+        }
+
+        public string Title { get; set; } = "[UNKNOWN]";
         public string Icon { get; set; } = IconCollection.Pyramid;
         public Type Type { get; set; } = typeof(UnknownTopic);
         public int Order { get; set; } = 5;
