--- a/SimTECH/SimTECH/Pages/UserManual/Topics/RaceCat/Reliability.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/RaceCat/Reliability.razor
@@ -13,19 +13,8 @@
     first laps tend to cause in motorsport.
 </MudText>
 
-<MudText Typo="Typo.subtitle1">Injury / Lethal</MudText>
-<MudDivider Class="my-1" />
-<MudText>
-    If a driver suffers from a reliablity failure, one additional roll will be done to see if the DNF in question is actually going to result in
-    a heavy crash where the driver either suffers from an injury or dies altogether. Which depends on whatever you would like it to be.
-
-</MudText>
-<MudText>
-    This can be completely disabled within the settings of a 'League'.
-</MudText>
-
 <MudText Typo="Typo.subtitle1">Inchidents</MudText>
 <MudDivider Class="my-1" />
 <MudText>
-    Customizable.
+    Customizable, see the specific topic for more information.
 </MudText>
