--- a/SimTECH/SimTECH/Pages/UserManual/Topics/SetupCat/DriverTopic.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/SetupCat/DriverTopic.razor
@@ -1,25 +1,32 @@
-﻿<MudText Typo="Typo.h6">Blokes participating at races</MudText>
+﻿<MudText Typo="Typo.h6">Drivers</MudText>
 <MudDivider Class="my-1" />
 
+<MudText>
+    Represents the people behind the racing wheel.
+</MudText>
+<br /><br/>
+<MudText>In-season value grade</MudText>
 <MudSimpleTable>
     <thead>
         <tr>
-            <th>Skill</th>
-            <th>Is that good?</th>
+            <th>Aspect</th>
+            <th>Bad</th>
+            <th>Average</th>
+            <th>Good</th>
         </tr>
     </thead>
     <tbody>
         <tr>
+            <td>Skill</td>
             <td>30</td>
-            <td>Naw, that's shite</td>
-        </tr>
-        <tr>
             <td>40</td>
-            <td>Decent, nothin special tho</td>
+            <td>50</td>
         </tr>
         <tr>
-            <td>50</td>
-            <td>Absolute legend. Master driver. Hero.</td>
+            <td>Reliability</td>
+            <td>970</td>
+            <td>980</td>
+            <td>990</td>
         </tr>
     </tbody>
 </MudSimpleTable>
